--- a/templates/index.html
+++ b/templates/index.html
@@ -48,6 +48,22 @@
           </div>
         </div>
       </div>
+            <!-- Section for Mars Hemispheres -->
+            <div class="row" id="mars-hemispheres">
+              <div class="page-header">
+                <h2 class="text-center">Mars Hemispheres</h2>
+              </div>
+              {% for hemisphere in mars.hemisphere_image %}
+              <div class="col-md-6">
+                <div class="thumbnail">
+                  <img src="{{hemisphere.img_url}} >
+                  <div class="caption">
+                    <h3>{{hemisphere.title}}</h3>
+                  </div>
+                </div>
+                
+              </div>
+              {% endfor %}
     </div>
   </body>
 </html>
