--- a/templates/index.html
+++ b/templates/index.html
@@ -16,14 +16,14 @@
       <div class="jumbotron text-center">
         <h1>Mission to Mars</h1>
         <!-- Add a button to activate scraping script -->
-        <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
+        <p><a class="btn btn-primary btn-lg" href="/scrape" role="button"><u>Scrape New Data</u></a></p>
       </div>
       <!-- Add section for Mars News -->
       <div class="row" id="mars-news">
         <div class="col-md-12">
           <div class="media">
             <div class="media-body">
-              <h2>Latest Mars News</h2>
+              <h2><mark>Latest Mars News</mark></h2>
               <h4 class="media-heading">{{ mars.news_title }}</h4>
               <p>{{ mars.news_paragraph }}</p>
             </div>
@@ -42,28 +42,27 @@
         </div>
         <div class="col-md-4">
           <!-- Mars Facts -->
-          <div class="row" id="mars-facts">
+          <div class="table table-striped" id="mars-facts">
             <h4>Mars Facts</h4>
             {{ mars.facts | safe }}
           </div>
         </div>
       </div>
             <!-- Section for Mars Hemispheres -->
-            <div class="row" id="mars-hemispheres">
-              <div class="page-header">
-                <h2 class="text-center">Mars Hemispheres</h2>
-              </div>
-              {% for hemisphere in mars.hemisphere_image %}
-              <div class="col-md-6">
-                <div class="thumbnail">
-                  <img src="{{hemisphere.img_url}} >
-                  <div class="caption">
-                    <h3>{{hemisphere.title}}</h3>
-                  </div>
-                </div>
-                
-              </div>
-              {% endfor %}
+        <div class="row" id="mars-hemispheres">
+          <div class="page-header">
+             <h2 class="text-center">Mars Hemispheres</h2>
+          </div>
+          {% for hemisphere in mars.hemisphere_image %}
+          <div class="col-md-6">
+            <div class="thumbnail">
+              <img src="{{hemisphere.img_url | default('static/images/error.png', true)}}" alt="...">
+               <div class="caption">
+                <h3>{{hemisphere.title}}</h3>
+               </div>
+            </div>
+          </div>
+          {% endfor %}
     </div>
   </body>
 </html>
