--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,7 @@
           <div class="page-header">
              <h2 class="text-center">Mars Hemispheres</h2>
           </div>
-          {% for hemisphere in mars.hemisphere_image %}
+          {% for hemisphere in mars.hemispheres %}
           <div class="col-md-6">
             <div class="thumbnail">
               <img src="{{hemisphere.img_url | default('static/images/error.png', true)}}" alt="...">
